--- a/javscript/index.html
+++ b/javscript/index.html
@@ -81,6 +81,11 @@
         .search-fail p {
             color: seagreen;
         }
+
+        body{
+            height: 2000px;
+        }
+      
     </style>
 </head>
 
@@ -93,7 +98,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="promises.js"></script>
+    <script src="debounce.js"></script>
 </body>
 
 </html>
